@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.41 (gritter) 4/8/06";
+	"@(#)/usr/ucb/otfdump.sl	6.42 (gritter) 4/14/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.41 (gritter) 4/8/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.41 (gritter) 4/8/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.42 (gritter) 4/14/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.42 (gritter) 4/14/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.41 (gritter) 4/8/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.42 (gritter) 4/14/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.41 (gritter) 4/8/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.42 (gritter) 4/14/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.41";
+const char revision[] = "6.42";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -26,7 +26,7 @@ mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
 n1.c: * Sccsid @(#)n1.c	1.67 (gritter) 4/3/06
 n2.c: * Sccsid @(#)n2.c	1.17 (gritter) 4/3/06
-n3.c: * Sccsid @(#)n3.c	1.77 (gritter) 4/8/06
+n3.c: * Sccsid @(#)n3.c	1.78 (gritter) 4/14/06
 n4.c: * Sccsid @(#)n4.c	1.25 (gritter) 3/21/06
 n5.c: * Sccsid @(#)n5.c	1.39 (gritter) 3/13/06
 n7.c: * Sccsid @(#)n7.c	1.45 (gritter) 4/2/06
@@ -38,18 +38,18 @@ suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
 tdef.h: * Sccsid @(#)tdef.h	1.72 (gritter) 4/3/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.23 (gritter) 3/22/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.32 (gritter) 3/26/06
-nroff.d/proto.h: * Sccsid @(#)proto.h	1.32 (gritter) 4/8/06
+nroff.d/proto.h: * Sccsid @(#)proto.h	1.33 (gritter) 4/14/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
 troff.d/afm.c: * Sccsid @(#)afm.c	1.53 (gritter) 3/20/06
-troff.d/afm.h: * Sccsid @(#)afm.h	1.28 (gritter) 3/16/06
+troff.d/afm.h: * Sccsid @(#)afm.h	1.29 (gritter) 4/14/06
 troff.d/dev.h: * Sccsid @(#)dev.h	1.10 (gritter) 3/10/06
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.12 (gritter) 3/10/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.52 (gritter) 3/17/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
-troff.d/proto.h: * Sccsid @(#)proto.h	1.41 (gritter) 4/8/06
+troff.d/proto.h: * Sccsid @(#)proto.h	1.42 (gritter) 4/14/06
 troff.d/t10.c: * Sccsid @(#)t10.c	1.65 (gritter) 4/2/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.135 (gritter) 4/8/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.136 (gritter) 4/14/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.22 (gritter) 4/2/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
